--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://6d71-2804-29b8-5015-2d0e-2444-3a4a-757d-e07f.ngrok-free.app/comments
+VITE_API_URL=http://6d71-2804-29b8-5015-2d0e-2444-3a4a-757d-e07f.ngrok-free.app/comments
